other-vpol/restrict-jobs/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: restrict-jobs
policies:
- ../restrict-jobs.yaml
resources:
- resource.yaml
results:
- isValidatingPolicy: true
  policy: restrict-jobs
  kind: Job
  resources:
  - badjob
  result: fail
- isValidatingPolicy: true
  policy: restrict-jobs
  kind: Job
  resources:
  - goodjob
  result: skip
